# PACE2024_Bachelor

./: .gitignore  Assignment.csv  Assignment_no_comma.csv  BarycenterSolver.cpp  BogoMinimizerSolver.cpp  CMakeLists.txt  Edge.h  Graph.cpp  Graph.h  MTSolverData.cpp  MedianSolver.cpp  OptimizedBCRightSolver.cpp  OptimizedBCSolver.cpp  OptimizedMedianSolver.cpp  ParentMinimizerSolver.cpp  Program.cpp  README.md  Solver.cpp  Solver.sh  Vertex.cpp  Vertex.h  allGraphs.sh  compileAndRun.sh  generateSolverData.sh  howtorun(formestupidsoidontforget).txt  mediumGraphs.sh  public9solvers.csv  readInput.cpp  requirements.txt  results.csv  solvers.csv  solvers.py  sweepVNaive.py
CrossingMinimizers/: Barycenter.cpp  Barycenter.h  BogoMinimizer.cpp  BogoMinimizer.h  CrossingMinimizer.h  Crossingminimizer.cpp  Median.cpp  Median.h  OptimizedBC.cpp  OptimizedBC.h  OptimizedBCRight.cpp  OptimizedBCRight.h  OptimizedMedian.cpp  OptimizedMedian.h  Split.h  (+2 more)
src/: CMakeLists.txt  Graph.cpp  Graph.h  Hybrid.cpp  PACE2024.tgz  Solver.cpp  Vertex.cpp  Vertex.h  compileAndRun.sh  hybrid.cpp  program.cpp
src/CrossingMinimizers/: Assignment.cpp  Assignment.h  Barycenter.cpp  Barycenter.h  BarycenterMed.cpp  BarycenterMed.h  BarycenterRev.cpp  BarycenterRev.h  BogoMinimizer.cpp  BogoMinimizer.h  CrossingMinimizer.h  Crossingminimizer.cpp  Median.cpp  Median.h  MedianBary.cpp  MedianBary.h  MedianRev.cpp  MedianRev.h  OptimizedBC.cpp  OptimizedBC.h  OptimizedBCRight.cpp  OptimizedBCRight.h  OptimizedMedian.cpp  OptimizedMedian.h  ParentMinimizer.cpp  ParentMinimizer.h  Utils.cpp  Utils.h
(+62 files in other folders)
